Correct overflow display on post preview elements

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,6 +12,10 @@ a, a:hover {
     color: inherit;
 }
 
+main {
+    min-width: none;
+}
+
 
 /* Navbar / Sidebar */
 nav {
@@ -114,9 +118,10 @@ nav {
     border-radius: 10px;
 }
 
-.post-preview {
-    height: 45px;
+.post-preview p {
     overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .btn-warning {
